tests/baselines/reference/unusedParametersWithUnderscore.errors.txt
tests/cases/compiler/unusedParametersWithUnderscore.ts(2,27): error TS6133: 'd' is declared but never used.
tests/cases/compiler/unusedParametersWithUnderscore.ts(2,29): error TS6133: 'e___' is declared but never used.
tests/cases/compiler/unusedParametersWithUnderscore.ts(2,35): error TS6133: 'f' is declared but never used.
tests/cases/compiler/unusedParametersWithUnderscore.ts(2,38): error TS6133: 'g__' is declared but never used.
tests/cases/compiler/unusedParametersWithUnderscore.ts(2,43): error TS6133: 'h' is declared but never used.
tests/cases/compiler/unusedParametersWithUnderscore.ts(2,46): error TS6133: 'i_' is declared but never used.
tests/cases/compiler/unusedParametersWithUnderscore.ts(12,16): error TS6133: 'arg' is declared but never used.
tests/cases/compiler/unusedParametersWithUnderscore.ts(18,20): error TS6133: 'arg' is declared but never used.


==== tests/cases/compiler/unusedParametersWithUnderscore.ts (8 errors) ====
    
    function f(a, _b, c, ___, d,e___, f, g__, h, i_) {
                              ~
!!! error TS6133: 'd' is declared but never used.
                                ~~~~
!!! error TS6133: 'e___' is declared but never used.
                                      ~
!!! error TS6133: 'f' is declared but never used.
                                         ~~~
!!! error TS6133: 'g__' is declared but never used.
                                              ~
!!! error TS6133: 'h' is declared but never used.
                                                 ~~
!!! error TS6133: 'i_' is declared but never used.
    }
    
    
    function f2({_a, __b}) {
    }
    
    function f3([_a, ,__b]) {
    }
    
    function f4(...arg) {
                   ~~~
!!! error TS6133: 'arg' is declared but never used.
    }
    
    function f5(..._arg) {
    }
    
    function f6(_arg?, arg?) {
                       ~~~
!!! error TS6133: 'arg' is declared but never used.
    }
    
    var f7 = _ => undefined;
    
    var f8 = function (_) { };